# ubuntu-location-provider-geoclue2

./: .gitignore  CMakeLists.txt  altitude.h  coordinate.h  geoclue.h  geoclue2.h  geoclueProvider.cpp  geoclueProvider.hpp  latitude.h  longitude.h  main.cpp  optional.h  position.h  service.hpp  ulsProvider.cpp  ulsProvider.hpp  units.h
data/: CMakeLists.txt  com.wolfpack.geoclue2.Service.Provider.conf.in  ubuntu-location-provider-geoclue2.in
debian/: changelog  control  copyright  postinst  prerm
